主进程、子进程处理逻辑拆分，便于理解。新增流程图

--- a/docker/conf/php/local.ini
+++ b/docker/conf/php/local.ini
@@ -2,6 +2,7 @@ cgi.fix_pathinfo=0
 upload_max_filesize=100M
 session.gc_maxlifetime=86400
 date.timezone=Asia/Shanghai
+redis.pconnect.pooling_enabled=1
 opcache.enable=1
 opcache.enable_cli=1
 opcache.jit=1235
