--- a/docker/conf/nginx/www.conf
+++ b/docker/conf/nginx/www.conf
@@ -3,7 +3,7 @@ server {
     server_name _;
 
     root /home/;
-    index public/index.html;
+    index index.html;
     charset utf-8;
     client_max_body_size 10m;
     client_body_buffer_size 10m;
