--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - ./conf/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./conf/nginx/www.conf:/etc/nginx/conf.d/www.conf
-      - /home/chat/html_v2:/home
+      - /home/chat/html_v2/dist:/home
 
   redis:
     image: redis:latest
