图片、音频上传和预览

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - ./conf/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./conf/nginx/www.conf:/etc/nginx/conf.d/www.conf
       - /home/chat/html_v2/dist:/home
+      - /home/chat/php/upload:/home/upload
 
   redis:
     image: redis:latest
