--- a/html_v2/package.json
+++ b/html_v2/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "lemon-imui": "^1.7.5",
+    "lemon-imui-rx": "^1.8.4",
     "msgpackr": "^1.6.3",
+    "v-viewer": "^1.7.4",
+    "viewerjs": "^1.11.6",
     "vue": "^2.6.14",
     "vue-js-modal": "^2.0.1",
     "vue-notification": "^1.3.20"
