--- a/html_v2/package.json
+++ b/html_v2/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "lemon-imui-rx": "^1.8.4",
+    "lemon-imui-rx": "^1.8.6",
     "msgpackr": "^1.6.3",
     "v-viewer": "^1.7.4",
     "viewerjs": "^1.11.6",
     "vue": "^2.6.14",
+    "vue-image-crop-upload": "^3.0.3",
     "vue-js-modal": "^2.0.1",
     "vue-notification": "^1.3.20"
   },
