--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,19 +12,20 @@ services:
     volumes:
       - ./conf/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./conf/nginx/www.conf:/etc/nginx/conf.d/www.conf
-      - /home/chat/html/dist:/home
-      - /home/chat/php/upload:/home/upload
+      - ../html/dist:/home
+      - ../php/upload:/home/upload
+      - ../ssl:/etc/nginx/ssl
 
   redis:
     image: redis:latest
     ports:
-      - 6379
+      - "6379:6379"
     networks:
       - my-web
     environment:
       - TZ=Asia/Shanghai
     volumes:
-      - /home/chat/data:/data
+      - ../data:/data
 
   php:
     build: .
@@ -40,7 +41,8 @@ services:
       - net.core.somaxconn=40960
     volumes:
       - ./conf/php/local.ini:/usr/local/etc/php/conf.d/local.ini
-      - /home/chat/php:/home/
+      - ../php:/home/
+      - ../ssl:/home/ssl
 
 networks:
   my-web:
