--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,15 +31,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      
       - name: Setup Pages
         uses: actions/configure-pages@v5
-      - name: setup-node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-      - name: build
+      
+      - name: Install and Build
         env:
           VUE_APP_SERVER_URL: ${{env.VUE_APP_SERVER_URL}}
           VUE_APP_UPLOAD_URL: ${{env.VUE_APP_UPLOAD_URL}}
-        run: npm install && npm run build
-      
+        run: |
+            npm ci
+            npm run build
+
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: build
