--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,6 @@ jobs:
 
       - name: Install and Build 🔧
         run: |
-          npm ci
-          npm run build
-          ls -al
+          pwd
 
       
