--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,9 +15,9 @@ jobs:
 
       - name: Install and Build 🔧
         env:
-          VUE_APP_SERVER_URL: ${{env.VUE_APP_SERVER_URL}}
-          VUE_APP_UPLOAD_URL: ${{env.VUE_APP_UPLOAD_URL}}
-          PUBLIC_PATH: ${{env.PUBLIC_PATH}}
+          VUE_APP_SERVER_URL: ${{vars.VUE_APP_SERVER_URL}}
+          VUE_APP_UPLOAD_URL: ${{vars.VUE_APP_UPLOAD_URL}}
+          PUBLIC_PATH: ${{vars.PUBLIC_PATH}}
         run: |
           npm ci
           npm run build
