使用session验证登录，增加Host和Origin验证，bug fixes

--- a/docker/conf/php/local.ini
+++ b/docker/conf/php/local.ini
@@ -1,8 +1,15 @@
 cgi.fix_pathinfo=0
 upload_max_filesize=100M
-session.gc_maxlifetime=86400
 date.timezone=Asia/Shanghai
+
+session.save_handler=redis
+session.save_path="tcp://redis:6379?weight=1"
+session.auto_start=0
+session.gc_maxlifetime=86400
+session.use_cookies=0
+
 redis.pconnect.pooling_enabled=1
+
 opcache.enable=1
 opcache.enable_cli=1
 opcache.jit=1235
